2015/11/10:
Optimized the computation of $symbolstartpos, based on a couple of assumptions
about the lexer. (See the manual.)

2015/11/04:
Modified the treatment of %inline so that the positions that are computed are
the same, regardless of whether %inline is used. This property did not hold
until now. It now does. Of course, this means that the positions computed by
the new Menhir are not the same as those computed by older versions of Menhir.

2015/11/04:
Fixed a bug in the treatment of %inline that would lead to an incorrect
position being computed when the caller and callee had a variable by the
same name.

2015/11/04:
Modified Menhir so as to compute the start and end positions in the exact same
way as ocamlyacc. (There used to be a difference in the treatment of epsilon
productions.) Of course, this means that the positions computed by the new
Menhir are not the same as those computed by older versions of Menhir. Added
the keyword $symbolstartpos so as to simulate Parsing.symbol_start_pos()
in the ocamlyacc world. The keyword $startpos sometimes produces a position
that is too far off to the left; $symbolstartpos produces a more accurate
position.

2015/11/04:
Incompatible change of the incremental API: instead of a unit argument, the
entry points (which are named after the start symbols) now require an initial
position, which typically should be [lexbuf.lex_curr_p].

2015/11/03:
Fix-fix-and-re-fix the Makefile in an attempt to allow installation under
opam/Windows. Thanks to Daniel Weil for patient explanations and testing.

2015/10/29:
MenhirLib is now installed in both binary and source forms.
"menhir --suggest-menhirLib" reports where MenhirLib is installed.
This can be used to retrieve a snapshot of MenhirLib in source form
and include it in your project (if you wish to use --table mode, yet
do not wish to have a dependency on MenhirLib).

2015/10/26:
Allow --list-errors to work on 32-bit machines (with low hard limits).