@@ -1,5 +1,3 @@
-* Add a magic number to detect inconsistencies between Menhir and MenhirLib?
-
 * Look for "artificial dependency" and remove them.
   Make sure every module is explicitly called.
 
