@@ -15,3 +15,4 @@ TableFormat
 InspectionTableFormat
 InspectionTableInterpreter
 TableInterpreter
+StaticVersion
